--- a/styles2.css
+++ b/styles2.css
@@ -1,4 +1,3 @@
-
 .color {
   --mainColor: #64bcf4;
   --hoverColor: #5bacdf;
@@ -9,7 +8,7 @@
   --lightTwo: #aaa;
 }
 
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -24,7 +23,6 @@ a {
 }
 
 .big-wrapper {
-  position: relative;
   padding: 1.7rem 0 2rem;
   width: 100%;
   min-height: 100vh;
@@ -35,8 +33,7 @@ a {
   justify-content: space-between;
 }
 
-.container ,.book,.contact{
-  position: relative;
+.container, .book, .contact {
   max-width: 81rem;
   width: 100%;
   margin: 0 auto;
@@ -44,18 +41,23 @@ a {
   z-index: 10;
 }
 
-.curise{
+.curise {
   margin: 0 auto;
   padding: 0 3rem;
 }
-.curise a{
+
+.curise a {
   background-color: var(--darkOne);
 }
 
-
 header {
-  position: relative;
-  z-index: 70;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: #f1f8fc; 
+  z-index: 1000;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 header .container {
@@ -64,12 +66,10 @@ header .container {
   align-items: center;
 }
 
-
 .logo {
   display: flex;
   align-items: center;
   cursor: pointer;
-
 }
 
 .logo img {
@@ -89,17 +89,18 @@ header .container {
   display: flex;
   list-style: none;
   align-items: center;
+  position: relative;
 }
 
-.links a{
+.links a {
   color: var(--lightTwo);
   margin-left: 4.5rem;
   display: inline-block;
   transition: 0.3s;
 }
 
-.links a:hover{
-  color: var(--hoverColor);
+.links a:hover {
+  color: #3f95ca;
   transform: scale(1.05);
 }
 
@@ -114,7 +115,7 @@ header .container {
 }
 
 .btn:hover {
-  background-color: var(--hoverColor);
+  background-color: var(--darkOne);
   transform: scale(1) !important;
 }
 
@@ -144,16 +145,12 @@ header .container {
   box-shadow: 0 0 40px 2px rgba(0, 0, 0, 0.05);
 }
 
-.ship ,.ship1{
+.ship, .ship1 {
   width: 123%;
   transform: translate(15%, 25px);
 }
 
-
-
-
 @media screen and (max-width: 870px) {
-  
   .links {
     position: fixed;
     top: 0;
@@ -226,4 +223,8 @@ header .container {
   .showcase-area .btn {
     font-size: 0.8rem;
   }
+}
+
+main {
+  padding-top: 5rem; 
 }
